<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/home_title"
        android:textColor="#173B67"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:text="@string/home_description"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnStudents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/students" />

    <Button
        android:id="@+id/btnCourses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/courses" />

    <Button
        android:id="@+id/btnEnrollments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enroll_student" />

    <Button
        android:id="@+id/btnReports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reports" />

</LinearLayout>
